force-app/main/default/objects/Visit_Information__c/Visit_Information__c.object-meta.xml
<CustomObject>
    <label>Visit Information</label>
    <nameField>
        <label>Visit Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>