force-app/main/default/objects/Visit_Information__c/fields/CLQ_Additional_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_Reviewer__c</fullName>
    <label>Additional Reviewer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>