force-app/main/default/objects/Visit_Information__c/fields/CLQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>