force-app/main/default/objects/Visit_Information__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Information</relationshipName>
    <type>Lookup</type>
</CustomField>